--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jason Jones"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Father | Computer Science Student | Cal State Polytechnic University, Pomona | NASA L'SPACE (MCA) Fall 2020 | NASA NCAS 2020 Alumni | ΦΘΚ Honor Society | Kellogg Honors College | Liquidation Auditor Costco Wholesale"
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
