--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,9 @@ analytics:
 author:
   name             : "Jason Jones"
   avatar           : "profile.png"
-  bio              : "Father | Computer Science Student | Cal State Polytechnic University, Pomona | NASA L'SPACE (MCA) Fall 2020 | NASA NCAS 2020 Alumni | ΦΘΚ Honor Society | Kellogg Honors College | Liquidation Auditor Costco Wholesale"
+  bio              : "Computer Science 
+  Cal State Polytechnic University, Pomona 
+  Liquidation Auditor Costco Wholesale"
   location         : "So-Cal"
   employer         : "Costco Wholesale"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
