--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Jason Jones"
   avatar           : "profile.png"
   bio              : "Computer Science 
-  Cal State Polytechnic University, Pomona 
+  California State Polytechnic University, Pomona 
   Liquidation Auditor Costco Wholesale"
   location         : "So-Cal"
   employer         : "Costco Wholesale"
