--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,7 @@ author:
   name             : "Jason Jones"
   avatar           : "profile.png"
   bio              : "Computer Science 
-  California State Polytechnic University, Pomona 
-  Liquidation Auditor Costco Wholesale"
+  California State Polytechnic University, Pomona"
   location         : "So-Cal"
   employer         : "Costco Wholesale"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
