--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 locale                   : "en-US"
 title                    : "Jason Jones The Dev"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://jasonjonesthe.dev/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Jason Jones"
+description              : &description "personal portfolio website"
+url                      : https://jasonjonesthe.dev # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -29,7 +29,7 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
+    colorscheme          : "dark" # "light" (default), "dark"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : #"academicpages"
+  github           : "https://github.com/jasojone" #academicpages"
   google_plus      :
   keybase          :
   instagram        : "https://www.instagram.com/jasojone/"
