--- a/_config.yml
+++ b/_config.yml
@@ -97,13 +97,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/jasojone" #academicpages"
+  github           : "jasojone" #academicpages"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/jasojone/"
+  instagram        : "/jasojone/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/jasonjones951/"
+  linkedin         : "/jasonjones951/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
