okay I mean it this time, the link is fixed...

--- a/_config.yml
+++ b/_config.yml
@@ -100,10 +100,10 @@ author:
   github           : "jasojone" #academicpages"
   google_plus      :
   keybase          :
-  instagram        : "jasojone/"
+  instagram        : "jasojone"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "jasonjones951/"
+  linkedin         : "jasonjones951"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
