--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        : "jasojone"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "jasonjones951"
+  linkedin         : "jasonryanjones"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
